# nr-link-simulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bler_awgn_ideal.csv  debug_siso.cpp  test_chain.cpp  test_ldpc.cpp  test_siso.cpp
docs/: SETUP_SYNC_GUIDE.md
examples/: CMakeLists.txt  cross_check_chan.cpp  cross_check_tx.cpp  debug_params.cpp  diag_tbs.cpp  pdsch_bler_all_mcs.cpp  pdsch_bler_cbs_test.cpp  pdsch_bler_mcs27.cpp  pdsch_bler_mcs27_fine.cpp  pdsch_bler_mcs27_tdla.cpp  pdsch_bler_qam16.cpp  pdsch_bler_qpsk.cpp  pdsch_bler_simulation.cpp  pdsch_bler_tdl_mimo.cpp  print_mcs_params.cpp  quick_test.cpp  test_bler.cpp  test_bler_perfect.cpp  test_chain.cpp  test_features.cpp  test_noise_est.cpp  test_noise_scaling.cpp  test_ofdm_power.cpp  test_tdl.cpp
include/channel/: ChannelModels.h
include/common/: NrTables.h  Types.h
include/phy/: LdpcTables.h  ModuleFactory.h  PdschProcessor.h  PhyInterfaces.h
results/: bler_mcs27_awgn_fine.csv  cpp_all_mcs_parsed.csv  sionna_all_mcs_awgn_fast.csv  sionna_mcs27_awgn.txt  sionna_refined_key_mcs.csv
results/bler_batch/: cpp_bler_mcs3-27.csv  cpp_bler_perfect_mcs3-27.csv  sionna_bler_mcs2-27.csv
scripts/: build.sh  cross_check_chan_eq.py  cross_check_sionna.py  parse_cpp_log.py  plot_all_mcs_comparison.py  plot_bler.py  plot_bler_comparison.py  plot_final_comparison.py  plot_mcs27_comparison.py  plot_mcs_bler_grid.py  plot_per_mcs_comparison.py  run_all_sionna.py  run_cpp_ls_supplement.py  run_cpp_perfect_parallel.py  run_cpp_tdl_doppler.py  run_remaining_sionna.py  run_tdl_doppler_comparison.py  sionna_all_mcs_awgn.py  sionna_all_mcs_matched.py  sionna_all_mcs_table2.py  sionna_all_mcs_v2.py  sionna_awgn_all_mcs_final.py  sionna_awgn_log.txt  sionna_bler_mcs5.py  sionna_check_mcs27.py  sionna_fast_all_mcs.py  sionna_mcs27_bler.py  sionna_mcs27_tdla.py  sionna_pusch_bler.py  sionna_refine_key_mcs.py  sionna_tdl_doppler.py  sionna_tdl_v3.py  supplement_ls_0.5dB.py  supplement_perfect_0.5dB.py  test_sionna.py  test_sionna_noiseless.py
scripts/results/: bler_all_mcs_summary.csv  bler_mcs27_awgn.csv  bler_mcs27_tdla_perfect_csi.csv  sionna_awgn_all_mcs.csv  sionna_awgn_all_mcs_v2.csv  sionna_mcs27_tdla_perfect_csi.csv
scripts/results/tdl_doppler/: cpp_ls_doppler_mcs10.csv  cpp_ls_doppler_mcs17.csv  cpp_ls_doppler_mcs27.csv  cpp_ls_doppler_mcs3.csv  cpp_perfect_mcs10.csv  cpp_perfect_mcs17.csv  cpp_perfect_mcs27.csv  cpp_perfect_mcs3.csv  sionna_ls_nodoppler_mcs10.csv  sionna_ls_nodoppler_mcs17.csv  sionna_ls_nodoppler_mcs27.csv  sionna_ls_nodoppler_mcs3.csv  sionna_perfect_mcs10.csv  sionna_perfect_mcs17.csv  sionna_perfect_mcs27.csv  sionna_perfect_mcs3.csv
src/: CMakeLists.txt
src/channel/: AwgnChannel.cpp  CdlChannel.cpp  TdlChannel.cpp
src/common/: NrTables.cpp  Utils.cpp
src/phy/: ChannelEstimator.cpp  CrcEncoder.cpp  DmrsGenerator.cpp  Equalizer.cpp  LayerMapper.cpp  LdpcCodec.cpp  Modulator.cpp  OfdmModulator.cpp  PdschProcessor.cpp  Precoder.cpp  RateMatcher.cpp  ResourceMapper.cpp  Scrambler.cpp
tests/: CMakeLists.txt  test_crc.cpp  test_modulator.cpp
